--- a/index.html
+++ b/index.html
@@ -5,44 +5,44 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="header-image" src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main">
       <p id="adding-element-to-list">
-        <label for="new-task">Add Item</label>
+        <label class="label-new-task" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <input id="new-task"class="task-input" type="text">
+          <button class="button">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+      <h3 class="task-title">Todo</h3>
+      <ul class="tasks-list" id="incomplete-tasks">
+        <li class="task-list-item">
+          <input class="task-checkbox" type="checkbox">
+          <label class="task-label">Pay Bills</label>
+          <input type="text" class="task-input">
+          <button class="button edit">Edit</button>
+          <button class="button delete"><img class="delete-button-image" src="./remove.svg"></button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+        <li class="task-list-item edit-mode">
+          <input class="task-checkbox" type="checkbox">
+          <label class="task-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task-input">
+          <button class="button edit">Save</button>
+          <button class="button delete"><img class="delete-button-image"  src="./remove.svg"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+      <h3 class="task-title">Completed</h3>
+      <ul class="tasks-list" id="completed-tasks">
+        <li class="task-list-item">
+          <input class="task-checkbox" type="checkbox" checked>
+          <label class="task-label">See the Doctor</label>
+          <input type="text" class="task-input">
+          <button class="button edit">Edit</button>
+          <button class="button delete"><img class="delete-button-image"  src="./remove.svg"></button>
         </li>
       </ul>
     </div>
