--- a/index.html
+++ b/index.html
@@ -6,46 +6,50 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body">
-    <div class="header">
+    <header class="header">
       <img class="header-image" src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
-      <p id="adding-element-to-list">
-        <label class="label-new-task" for="new-task">Add Item</label>
+    </header>
+    <main class="main">
+      <section id="adding-element-to-list">
+        <h3 class="task-title">Add Item</h3>
         <div class="task-row-wrapper">
           <input id="new-task"class="task-input" type="text">
           <button class="button">Add</button>
         </div>
-      </p>
-      <h3 class="task-title">Todo</h3>
-      <ul class="tasks-list" id="incomplete-tasks">
-        <li class="task-list-item">
-          <input class="task-checkbox" type="checkbox">
-          <label class="task-label">Pay Bills</label>
-          <input type="text" class="task-input">
-          <button class="button edit">Edit</button>
-          <button class="button delete"><img class="delete-button-image" src="./remove.svg"></button>
-        </li>
-        <li class="task-list-item edit-mode">
-          <input class="task-checkbox" type="checkbox">
-          <label class="task-label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task-input">
-          <button class="button edit">Save</button>
-          <button class="button delete"><img class="delete-button-image"  src="./remove.svg"></button>
-        </li>
-      </ul>
-      <h3 class="task-title">Completed</h3>
-      <ul class="tasks-list" id="completed-tasks">
-        <li class="task-list-item">
-          <input class="task-checkbox" type="checkbox" checked>
-          <label class="task-label">See the Doctor</label>
-          <input type="text" class="task-input">
-          <button class="button edit">Edit</button>
-          <button class="button delete"><img class="delete-button-image"  src="./remove.svg"></button>
-        </li>
-      </ul>
-    </div>
+      </section>
+      <section>
+        <h3 class="task-title">Todo</h3>
+        <ul class="tasks-list" id="incomplete-tasks">
+          <li class="task-list-item">
+            <input class="task-checkbox" type="checkbox">
+            <label class="task-label">Pay Bills</label>
+            <input type="text" class="task-input">
+            <button class="button edit">Edit</button>
+            <button class="button delete"><img class="delete-button-image" src="./remove.svg"></button>
+          </li>
+          <li class="task-list-item edit-mode">
+            <input class="task-checkbox" type="checkbox">
+            <label class="task-label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task-input">
+            <button class="button edit">Save</button>
+            <button class="button delete"><img class="delete-button-image" src="./remove.svg"></button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3 class="task-title">Completed</h3>
+        <ul class="tasks-list" id="completed-tasks">
+          <li class="task-list-item">
+            <input class="task-checkbox" type="checkbox" checked>
+            <label class="task-label">See the Doctor</label>
+            <input type="text" class="task-input">
+            <button class="button edit">Edit</button>
+            <button class="button delete"><img class="delete-button-image" src="./remove.svg"></button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
