--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="header-image" src="./eisenhower-matrix.jpg">
+      <img class="header-image" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -26,14 +26,14 @@
             <label class="task-label">Pay Bills</label>
             <input type="text" class="task-input">
             <button class="button edit">Edit</button>
-            <button class="button delete"><img class="delete-button-image" src="./remove.svg"></button>
+            <button class="button delete"><img class="delete-button-image" src="./remove.svg" alt="delete task icon"></button>
           </li>
           <li class="task-list-item edit-mode">
             <input class="task-checkbox" type="checkbox">
             <label class="task-label">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task-input">
             <button class="button edit">Save</button>
-            <button class="button delete"><img class="delete-button-image" src="./remove.svg"></button>
+            <button class="button delete"><img class="delete-button-image" src="./remove.svg" alt="delete task icon"></button>
           </li>
         </ul>
       </section>
@@ -45,7 +45,7 @@
             <label class="task-label">See the Doctor</label>
             <input type="text" class="task-input">
             <button class="button edit">Edit</button>
-            <button class="button delete"><img class="delete-button-image" src="./remove.svg"></button>
+            <button class="button delete"><img class="delete-button-image" src="./remove.svg" alt="delete task icon"></button>
           </li>
         </ul>
       </section>
