--- a/index.html
+++ b/index.html
@@ -6,46 +6,46 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body">
-    <header class="header">
-      <img class="header-image" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <header class="body__header header">
+      <img class="header__image" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="main">
-      <section id="adding-element-to-list">
-        <h3 class="task-title">Add Item</h3>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task-input" type="text">
-          <button class="button">Add</button>
+    <main class="body__main main">
+      <section class="main__tasks tasks" id="adding-element-to-list">
+        <h3 class="tasks__title">Add Item</h3>
+        <div class="tasks__wrapper new-task">
+          <input class="new-task__input" id="new-task" type="text">
+          <button class="new-task__button button">Add</button>
         </div>
       </section>
-      <section>
-        <h3 class="task-title">Todo</h3>
-        <ul class="tasks-list" id="incomplete-tasks">
-          <li class="task-list-item">
-            <input class="task-checkbox" type="checkbox">
-            <label class="task-label">Pay Bills</label>
-            <input type="text" class="task-input">
-            <button class="button edit">Edit</button>
-            <button class="button delete"><img class="delete-button-image" src="./remove.svg" alt="delete task icon"></button>
+      <section class="main__tasks tasks">
+        <h3 class="tasks__title">Todo</h3>
+        <ul class="tasks__list task" id="incomplete-tasks">
+          <li class="task__item item">
+            <input class="item__checkbox" type="checkbox">
+            <label class="item__label">Pay Bills</label>
+            <input class="item__input" type="text">
+            <button class="item__button-edit button">Edit</button>
+            <button class="item__button-delete button button-delete"><img class="button-delete__image" src="./remove.svg" alt="delete task icon"></button>
           </li>
-          <li class="task-list-item edit-mode">
-            <input class="task-checkbox" type="checkbox">
-            <label class="task-label">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task-input">
-            <button class="button edit">Save</button>
-            <button class="button delete"><img class="delete-button-image" src="./remove.svg" alt="delete task icon"></button>
+          <li class="task__item item edit-mode">
+            <input class="item__checkbox" type="checkbox">
+            <label class="item__label">Go Shopping</label>
+            <input class="item__input" type="text" value="Go Shopping">
+            <button class="item__button-edit button">Save</button>
+            <button class="item__button-delete button button-delete"><img class="button-delete__image" src="./remove.svg" alt="delete task icon"></button>
           </li>
         </ul>
       </section>
-      <section>
-        <h3 class="task-title">Completed</h3>
-        <ul class="tasks-list" id="completed-tasks">
-          <li class="task-list-item">
-            <input class="task-checkbox" type="checkbox" checked>
-            <label class="task-label">See the Doctor</label>
-            <input type="text" class="task-input">
-            <button class="button edit">Edit</button>
-            <button class="button delete"><img class="delete-button-image" src="./remove.svg" alt="delete task icon"></button>
+      <section class="main__tasks tasks">
+        <h3 class="tasks__title">Completed</h3>
+        <ul class="tasks__list task" id="completed-tasks">
+          <li class="task__item item">
+            <input class="item__checkbox" type="checkbox" checked>
+            <label class="item__label">See the Doctor</label>
+            <input class="item__input" type="text">
+            <button class="item__button-edit button">Edit</button>
+            <button class="item__button-delete button button-delete"><img class="button-delete__image" src="./remove.svg" alt="delete task icon"></button>
           </li>
         </ul>
       </section>
